Started on viewing current shift

--- a/App/frontHouse/app/src/main/AndroidManifest.xml
+++ b/App/frontHouse/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ShiftVeiw"></activity>
+        <activity android:name=".ShiftView" />
+        <activity android:name=".MyAvailability"></activity>
     </application>
 
 </manifest>
