--- a/App/frontHouse/app/src/main/AndroidManifest.xml
+++ b/App/frontHouse/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" />
+        <activity android:name=".Main2Activity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <service android:name=".Notification">
             <intent-filter>
@@ -32,7 +33,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ShiftVeiw"></activity>
+        <activity android:name=".ShiftView" />
+        <activity android:name=".MyAvailability"></activity>
     </application>
 
 </manifest>
